[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/UI/Scripts/HelpUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/SmallFontItalic.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/UI/Scenes/CaptionBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://External/Fonts/LinLibertine.tres" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/Themes/Theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/UI/Images/Buttons/down_10_h.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Images/Buttons/down_10.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Scenes/Menus/MenuPages.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.866667, 0.811765, 0.737255, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 3
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 4
corner_radius_bottom_right = 2
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxLine" id=4]
thickness = 0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 2
border_width_top = 4
border_width_right = 2
border_width_bottom = 4
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 4.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 2
border_width_top = 4
border_width_right = 2
border_width_bottom = 4
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 4.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0.227451 )
border_width_left = 2
border_width_top = 4
border_width_right = 2
border_width_bottom = 4
border_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
bg_color = Color( 0.466667, 0.396078, 0.266667, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_bottom = 6.0

[sub_resource type="Theme" id=9]
default_font = ExtResource( 2 )
Button/colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = null
OptionButton/colors/font_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
OptionButton/colors/font_color_disabled = Color( 0.258824, 0.188235, 0.0509804, 0.501961 )
OptionButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
OptionButton/constants/arrow_margin = 6
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = ExtResource( 2 )
OptionButton/icons/arrow = ExtResource( 7 )
OptionButton/icons/arrow_hover = ExtResource( 6 )
OptionButton/styles/disabled = SubResource( 3 )
OptionButton/styles/focus = SubResource( 4 )
OptionButton/styles/hover = SubResource( 5 )
OptionButton/styles/normal = SubResource( 6 )
OptionButton/styles/pressed = SubResource( 7 )
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 8 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
RichTextLabel/colors/default_color = Color( 0.258824, 0.188235, 0.0509804, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null

[node name="HelpUI" instance=ExtResource( 8 )]
script = ExtResource( 1 )

[node name="Help" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="1" instance=ExtResource( 3 )]
margin_bottom = 56.0
text = "Help"

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="2"]
margin_top = 60.0
margin_right = 300.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 300 )
size_flags_vertical = 3
size_flags_stretch_ratio = 7.2
theme = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[b]Greetings, curious visitor and thank you for your interest![/b]

This game is in an early state right now and will replace the FIFE version of Unknown Horizons in the long-term.

To stay in touch with the latest updates or to report issues, please visit the [url=\"https://github.com/unknown-horizons/godot-port\"]official GitHub repository[/url].

Further links to get in contact with the developers and the community:
    => [url=https://discord.gg/VX6m2ZX]Discord[/url]
    => [url=https://forum.freegamedev.net/viewforum.php?f=100]Forum[/url]"
text = "Greetings, curious visitor and thank you for your interest!

This game is in an early state right now and will replace the FIFE version of Unknown Horizons in the long-term.

To stay in touch with the latest updates or to report issues, please visit the official GitHub repository.

Further links to get in contact with the developers and the community:
    => Discord
    => Forum"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="3"]
margin_top = 407.0
margin_right = 300.0
margin_bottom = 427.0
size_flags_vertical = 10
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[url=https://www.unknown-horizons.org/]www.Unknown-Horizons.org[/url]"
text = "www.Unknown-Horizons.org"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="4"]
margin_top = 431.0
margin_right = 300.0
margin_bottom = 451.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "© The Unknown Horizons Team 2009 - 2020"
text = "© The Unknown Horizons Team 2009 - 2020"
fit_content_height = true
scroll_active = false

[node name="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="5"]
margin_top = 460.0

[node name="PageControl" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/HBoxContainer" index="1"]
visible = true
margin_left = 0.0
[connection signal="meta_clicked" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_clicked" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/RichTextLabel2" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/RightPage/HBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]

[editable path="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage"]

[editable path="CenterContainer/TextureRect/MarginContainer/HBoxContainer/RightPage"]
